# Sistema_de_banco

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SQL.sql
db/: banco.db
include/: cliente.cpp  cliente.hpp
src/: main.cpp
